--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,31 +11,31 @@
             <h1 class="display-4">Novo Pedido</h1>
         </div>
 
-        <form class="card" action="/pedido/novo" method="POST">
-            <div class="container">
-                <div class="mb-3">
+        <div class="card mt-3">
+            <form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
+                <div class="form-group">
                     <label for="nomeProduto">Produto</label>
-                    <input class="form-control" name="nomeProduto" placeholder="Nome do produto">
+                    <input th:field="*{nomeProduto}" class="form-control" placeholder="Nome do produto">
                     <small>Informe qual o nome do produto</small>
                 </div>
-                <div class="mb-3">
+                <div class="form-group">
                     <label for="urlProduto">Url:</label>
-                    <input class="form-control" name="urlProduto" placeholder="url do produto">
+                    <input th:field="*{urlProduto}" class="form-control" placeholder="url do produto">
                     <small>Procure em um site o produto que você deseja e cole a url da página aqui</small>
                 </div>
-                <div class="mb-3">
+                <div class="form-group">
                     <label for="urlImagem">Imagem:</label>
-                    <input class="form-control" name="urlImagem" placeholder="url da imagem">
+                    <input th:field="*{urlImagem}" class="form-control"placeholder="url da imagem">
                     <small>Copie a url de uma boa imagem do produto e cole aqui para ajudar a conseguir compradores</small>
                 </div>
-                <div class="mb-3">
+                <div class="form-group">
                     <label for="descricao">Descrição:</label>
-                    <textarea class="form-control" name="descricao" placeholder="Adicione detalhes importantes para ajudar o comprador"></textarea>
+                    <textarea th:field="*{descricao}" class="form-control" placeholder="Adicione detalhes importantes para ajudar o comprador"></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary mb-3">Cadastrar</button>
-            </div>
-        </form>
+                <button type="submit" class="btn btn-primary">Cadastrar</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
