--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-</head>
+<head th:replace="~{base :: head}"></head>
 <body>
-    <div class="container">
-        <div class="jumbotron mb-0">
-            <h1 class="display-4">Meus Pedidos</h1>
+<div th:replace="~{base :: logo}"></div>
+<div class="container">
+    <div th:replace="~{base :: titulo('Meus pedidos')}"></div>
+    <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
+        <div class="navbar-nav">
+            <a th:classappend="${statusPedido} == null ? 'active'"class="nav-item nav-link" href="/home">Todos</a>
+            <a th:classappend="${statusPedido} == 'aguardando' ? 'active'" class="nav-item nav-link" href="/home/aguardando">Aguardando</a>
+            <a th:classappend="${statusPedido} == 'aprovado' ? 'active' "class="nav-item nav-link" href="/home/aprovado">Aprovado</a>
+            <a th:classappend="${statusPedido} == 'entregue' ? 'active' "class="nav-item nav-link" href="/home/entregue">Entregue</a>
         </div>
-        <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="">Todos</a>
-                <a class="nav-item nav-link" href="">Aguardando</a>
-                <a class="nav-item nav-link" href="">Aprovado</a>
-                <a class="nav-item nav-link" href="">Entregue</a>
-            </div>
-            <a href="/pedido/formulario"><button class="btn btn-outline-secondary">Novo</button></a>
-        </nav>
+        <a href="/pedido/formulario"><button class="btn btn-outline-secondary">Novo</button></a>
+    </nav>
 
-        <div class="card mb-3" th:each="pedido : ${pedidos}">
-            <div class="card-header" th:text="${pedido.nomeProduto}">Nome do produto: </div>
+    <div class="card mb-3" th:each="pedido : ${pedidos}">
 
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-12 col-sm-8">
-                        <div class="row">
-                            <div class="col-md-5">Valor: <span th:text="${pedido.valorNegociado}">200,99</span></div>
-                            <div class="col-md-7">Data da entrega: <span th:text="${pedido.dataDeEntrega}">20/04/2023</span></div>
-                        </div>
+        <th:block th:switch="${pedido.statusPedido.name()}">
+            <div th:case="'AGUARDANDO'" class="card-header bg-warning" th:text="${pedido.nomeProduto}">Nome do produto: </div>
+            <div th:case="'APROVADO'" class="card-header bg-success" th:text="${pedido.nomeProduto}">Nome do produto: </div>
+            <div th:case="'ENTREGUE'" class="card-header bg-secondary" th:text="${pedido.nomeProduto}">Nome do produto: </div>
+        </th:block>
 
-                        <div>Produto: </div>
-                        <div>
-                            <input class="form-control" th:value="${pedido.urlProduto}" value="Url do produto">
-                        </div>
-
-                        <div>Descrição: </div>
-                        <div>
-                            <textarea class="form-control" th:text="${pedido.descricao}">descrição do pedido</textarea>
-                        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-12 col-sm-8">
+                    <div class="row">
+                        <div class="col-md-5">Valor: <span th:if="${pedido.valorNegociado} != null" th:text="${'R$ ' + #numbers.formatDecimal(pedido.valorNegociado,2,'POINT',2,'COMMA')}">200,99</span></div>
+                        <div class="col-md-7">Data da entrega: <span th:text="${#temporals.format(pedido.dataDeEntrega, 'dd/MM/yyyy')}">20/04/2023</span></div>
                     </div>
-                    <div class="col-12 col-sm-4">
-                        <div>
-                            <img class="img-thumbnail" th:src="${pedido.urlImagem}" src="Url da imagem">
-                        </div>
+
+                    <div>Produto: </div>
+                    <div>
+                        <input class="form-control" th:value="${pedido.urlProduto}" value="Url do produto">
+                    </div>
+
+                    <div>Descrição: </div>
+                    <div>
+                        <textarea class="form-control" th:text="${pedido.descricao}">descrição do pedido</textarea>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <div>
+                        <img class="img-thumbnail" th:src="${pedido.urlImagem}" src="Url da imagem">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
 </body>
 </html>
