--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-</head>
+<head th:replace="~{base :: head}"></head>
 <body>
-    <div class="container">
-        <div class="jumbotron mb-0">
-            <h1 class="display-4">Novo Pedido</h1>
-        </div>
+<div th:replace="~{base :: logo}"></div>
+<div class="container">
+    <div th:replace="~{base :: titulo('Novo Pedido')}"></div>
 
-        <div class="card mt-3">
-            <form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
-                <div class="form-group">
-                    <label for="nomeProduto">Produto</label>
-                    <input th:field="*{nomeProduto}" class="form-control" placeholder="Nome do produto">
-                    <small>Informe qual o nome do produto</small>
+    <div class="card mt-3">
+        <form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
+            <div class="form-group mb-3">
+                <label for="nomeProduto">Produto</label>
+                <input th:field="*{nomeProduto}" th:errorclass="is-invalid" class="form-control" placeholder="Nome do produto">
+                <small>Informe qual o nome do produto</small>
+                <div class="invalid-feedback" th:errors="*{nomeProduto}">
+                    Erros do nome do produto
                 </div>
-                <div class="form-group">
-                    <label for="urlProduto">Url:</label>
-                    <input th:field="*{urlProduto}" class="form-control" placeholder="url do produto">
-                    <small>Procure em um site o produto que você deseja e cole a url da página aqui</small>
+            </div>
+            <div class="form-group mb-3">
+                <label for="urlProduto">Url:</label>
+                <input th:field="*{urlProduto}" th:errorclass="is-invalid" class="form-control" placeholder="url do produto">
+                <small>Procure em um site o produto que você deseja e cole a url da página aqui</small>
+                <div class="invalid-feedback" th:errors="*{urlProduto}">
+                    Erros da url do produto
                 </div>
-                <div class="form-group">
-                    <label for="urlImagem">Imagem:</label>
-                    <input th:field="*{urlImagem}" class="form-control"placeholder="url da imagem">
-                    <small>Copie a url de uma boa imagem do produto e cole aqui para ajudar a conseguir compradores</small>
+            </div>
+            <div class="form-group mb-3">
+                <label for="urlImagem">Imagem:</label>
+                <input th:field="*{urlImagem}" th:errorclass="is-invalid" class="form-control" placeholder="url da imagem">
+                <small>Copie a url de uma boa imagem do produto e cole aqui para ajudar a conseguir compradores</small>
+                <div class="invalid-feedback" th:errors="*{urlImagem}">
+                    Erros da url da imagem
                 </div>
-                <div class="form-group">
-                    <label for="descricao">Descrição:</label>
-                    <textarea th:field="*{descricao}" class="form-control" placeholder="Adicione detalhes importantes para ajudar o comprador"></textarea>
-                </div>
+            </div>
+            <div class="form-group mb-3">
+                <label for="descricao">Descrição:</label>
+                <textarea th:field="*{descricao}" class="form-control" placeholder="Adicione detalhes importantes para ajudar o comprador"></textarea>
+            </div>
 
-                <button type="submit" class="btn btn-primary">Cadastrar</button>
-            </form>
-        </div>
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+        </form>
     </div>
+</div>
 </body>
 </html>
