--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:fragment="head">
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,10 +19,14 @@
 
 <div th:fragment="logo" class="Logo-container mb-3 p-3 d-flex justify-content-between">
     <span class="Logo">mudi</span>
-    <span class="mt-3">login</span>
+    <span class="mt-3">
+        <a class="text-light" sec:authorize="!isAuthenticated()" href="/login">login</a>
+        <a onclick="document.querySelector('#form-login').submit()" class="text-light" sec:authorize="isAuthenticated()" href="#">logout</a>
+        <form id="form-login" th:action="@{/logout}" method="post"></form>
+    </span>
 </div>
 
-<div th:fragment="titulo(valor)" class="jumbotron mb-0">
+<div th:fragment="titulo(valor)" class="jumbotron bg-light mb-0">
     <h1 class="display-4" th:text="${valor}"></h1>
 </div>
 
