--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -4,11 +4,24 @@
 <body>
 <div th:replace="~{base :: logo}"></div>
 <div class="container">
-    <div th:replace="~{base :: titulo('Últimos pedidos')}"></div>
+    <div th:replace="~{base :: titulo('Meus pedidos')}"></div>
+    <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
+        <div class="navbar-nav">
+            <a th:classappend="${statusPedido} == null ? 'active'" class="nav-item nav-link" th:href="@{/usuario/pedidos}">Todos</a>
+            <a th:classappend="${statusPedido} == 'aguardando' ? 'active'" class="nav-item nav-link" th:href="@{/usuario/pedidos/aguardando}">Aguardando</a>
+            <a th:classappend="${statusPedido} == 'aprovado' ? 'active' " class="nav-item nav-link" th:href="@{/usuario/pedidos/aprovado}">Aprovado</a>
+            <a th:classappend="${statusPedido} == 'entregue' ? 'active' " class="nav-item nav-link" th:href="@{/usuario/pedidos/entregue}">Entregue</a>
+        </div>
+        <a th:href="@{/pedido/formulario}"><button class="btn btn-outline-secondary">Novo</button></a>
+    </nav>
 
     <div class="card mb-3" th:each="pedido : ${pedidos}">
 
-        <div class="card-header bg-secondary" th:text="${pedido.nomeProduto}">Nome do produto: </div>
+        <th:block th:switch="${pedido.statusPedido.name()}">
+            <div th:case="'AGUARDANDO'" class="card-header bg-warning" th:text="${pedido.nomeProduto}">Nome do produto: </div>
+            <div th:case="'APROVADO'" class="card-header bg-success" th:text="${pedido.nomeProduto}">Nome do produto: </div>
+            <div th:case="'ENTREGUE'" class="card-header bg-secondary" th:text="${pedido.nomeProduto}">Nome do produto: </div>
+        </th:block>
 
         <div class="card-body">
             <div class="row">
