--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 
 <div th:fragment="logo" >
-    <div class="row Logo-container p-3 d-flex justify-content-between">
+    <div class="Logo-container p-3 d-flex justify-content-between">
         <span class="Logo ml-2">mudi</span>
         <span class="mt-3 mr-2">
             <a class="text-light" sec:authorize="!isAuthenticated()" href="/login">login</a>
@@ -26,11 +26,12 @@
             <form id="form-login" th:action="@{/logout}" method="post"></form>
         </span>
     </div>
-    <div class="row" sec:authorize="isAuthenticated()">
+    <div sec:authorize="isAuthenticated()">
         <div class="col">
             <nav class="nav">
                 <a class="nav-link" th:href="@{/home}">Home</a>
                 <a class="nav-link" th:href="@{/usuario/pedidos}">Meus Pedidos</a>
+                <a class="nav-link" th:href="@{/oferta}">Faça sua oferta</a>
             </nav>
         </div>
     </div>
